[package]
name = "auth_Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version:"2.1.3", features = ["postgres"]}
rocket = "0.4.11"
rocket_contrib = "0.4.11"
rocket_cors = "0.5.2"
serde = "1.0.192"
serde_json = "1.0.108"
